WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
242090
[libpas] pas_utils.c fails to build due to missing parameter names in pas_crash_with_info_impl()
https://bugs.webkit.org/show_bug.cgi?id=242090
Summary
[libpas] pas_utils.c fails to build due to missing parameter names in pas_cra...
Adrian Perez
Reported
2022-06-28 16:31:19 PDT
Reproducible using Buildroot toolchains, for example with the following commands: N=riscv64-buildroot-linux-gnu_sdk-buildroot.tar.gz curl -LO
http://people.igalia.com/aperez/files/$N
tar -xf $N SDK="$(pwd)/$N" sh "$SDK/relocate-sdk.sh" cmake -Spath/to/WebKit -Bbuild-riscv64 -GNinja \ -DPORT=JSCOnly -DENABLE_STATIC_JSC=ON \ -DCMAKE_TOOLCHAIN_FILE="$SDK/share/buildroot/toolchainfile.cmake" \ -DRuby_EXECUTABLE=/usr/bin/ruby ninja -Cbuild-riscv64 The following error will be produced: FAILED: Source/bmalloc/CMakeFiles/bmalloc.dir/libpas/src/libpas/pas_utils.c.o /home/aperez/riscv64-buildroot-linux-gnu_sdk-buildroot/bin/ccache /home/aperez/riscv64-buildroot-linux-gnu_sdk-buildroot/bin/riscv64-buildroot-linux-gnu-gcc --sysroot=/home/aperez/riscv64-buildroot-linux-gnu_sdk-buildroot/riscv64-buildroot-linux-gnu/sysroot -DBUILDING_JSCONLY__ -DBUILDING_WITH_CMAKE=1 -DBUILDING_bmalloc -DHAVE_CONFIG_H=1 -DPAS_BMALLOC=1 -I/home/aperez/devel/WebKit/Source/bmalloc -I/home/aperez/devel/WebKit/Source/bmalloc/bmalloc -I/home/aperez/devel/WebKit/Source/bmalloc/libpas/src/libpas -fdiagnostics-color=always -Wextra -Wall -pipe -Wno-expansion-to-defined -Wno-psabi -Wno-misleading-indentation -Wno-maybe-uninitialized -Wwrite-strings -Wundef -Wpointer-arith -Wmissing-format-attribute -Wformat-security -Wcast-align -Wno-tautological-compare -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -Os -g2 -D_FORTIFY_SOURCE=1 -fno-strict-aliasing -fno-exceptions -DNDEBUG -fPIC -fvisibility=hidden -Wno-missing-field-initializers -Wno-cast-align -MD -MT Source/bmalloc/CMakeFiles/bmalloc.dir/libpas/src/libpas/pas_utils.c.o -MF Source/bmalloc/CMakeFiles/bmalloc.dir/libpas/src/libpas/pas_utils.c.o.d -o Source/bmalloc/CMakeFiles/bmalloc.dir/libpas/src/libpas/pas_utils.c.o -c /home/aperez/devel/WebKit/Source/bmalloc/libpas/src/libpas/pas_utils.c ../Source/bmalloc/libpas/src/libpas/pas_utils.c: In function ‘pas_crash_with_info_impl’: ../Source/bmalloc/libpas/src/libpas/pas_utils.c:150:69: error: parameter name omitted 150 | PAS_NEVER_INLINE PAS_NO_RETURN static void pas_crash_with_info_impl(uint64_t, uint64_t, uint64_t, uint64_t, uint64_t, uint64_t, uint64_t) { __builtin_trap(); } | ^~~~~~~~ ../Source/bmalloc/libpas/src/libpas/pas_utils.c:150:79: error: parameter name omitted 150 | PAS_NEVER_INLINE PAS_NO_RETURN static void pas_crash_with_info_impl(uint64_t, uint64_t, uint64_t, uint64_t, uint64_t, uint64_t, uint64_t) { __builtin_trap(); } | ^~~~~~~~ ../Source/bmalloc/libpas/src/libpas/pas_utils.c:150:89: error: parameter name omitted 150 | PAS_NEVER_INLINE PAS_NO_RETURN static void pas_crash_with_info_impl(uint64_t, uint64_t, uint64_t, uint64_t, uint64_t, uint64_t, uint64_t) { __builtin_trap(); } | ^~~~~~~~ ../Source/bmalloc/libpas/src/libpas/pas_utils.c:150:99: error: parameter name omitted 150 | PAS_NEVER_INLINE PAS_NO_RETURN static void pas_crash_with_info_impl(uint64_t, uint64_t, uint64_t, uint64_t, uint64_t, uint64_t, uint64_t) { __builtin_trap(); } | ^~~~~~~~ ../Source/bmalloc/libpas/src/libpas/pas_utils.c:150:109: error: parameter name omitted 150 | PAS_NEVER_INLINE PAS_NO_RETURN static void pas_crash_with_info_impl(uint64_t, uint64_t, uint64_t, uint64_t, uint64_t, uint64_t, uint64_t) { __builtin_trap(); } | ^~~~~~~~ ../Source/bmalloc/libpas/src/libpas/pas_utils.c:150:119: error: parameter name omitted 150 | PAS_NEVER_INLINE PAS_NO_RETURN static void pas_crash_with_info_impl(uint64_t, uint64_t, uint64_t, uint64_t, uint64_t, uint64_t, uint64_t) { __builtin_trap(); } | ^~~~~~~~ ../Source/bmalloc/libpas/src/libpas/pas_utils.c:150:129: error: parameter name omitted 150 | PAS_NEVER_INLINE PAS_NO_RETURN static void pas_crash_with_info_impl(uint64_t, uint64_t, uint64_t, uint64_t, uint64_t, uint64_t, uint64_t) { __builtin_trap(); } | ^~~~~~~~
Attachments
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2022-06-28 16:37:34 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/1878
EWS
Comment 2
2022-06-30 03:56:16 PDT
Committed
251986@main
(ff4150d0f6d4): <
https://commits.webkit.org/251986@main
> Reviewed commits have been landed. Closing PR #1878 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-06-30 03:57:13 PDT
<
rdar://problem/96207860
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug