[libpas] pas_utils.c fails to build due to missing parameter names in pas_crash_with_info_impl() https://bugs.webkit.org/show_bug.cgi?id=242090

Reviewed by Yusuke Suzuki.

* Source/bmalloc/libpas/src/libpas/pas_utils.c:
(pas_crash_with_info_impl): Add missing parameter names, and use
PAS_IGNORE_WARNINGS_{BEGIN,END} to avoid compiler warnings about
unused variables.

Canonical link: https://commits.webkit.org/251986@main